# ros2_arctos

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md
.github/ISSUE_TEMPLATE/: ❓-question-or-support-request.md  🐞-bug-report.md  🚀-feature-request.md
arctos_bringup/launch/: arctos_bringup.launch.py  controller.launch.py
arctos_description/config/: arctos_controller.yaml  ros2_controllers.yaml
arctos_description/config/hardware/: motor_config.yaml  test_motor_config.yaml
arctos_description/config/ros2_controllers/: test_controller.yaml
arctos_description/launch/: test_single_motor.launch.py
arctos_description/urdf/: arctos.xacro  arctos_gripper.xacro  arctos_ros2_control.xacro  joint_link.xacro  test_single_motor.urdf.xacro
arctos_description/urdf/base_xyz/: README.md  arctos.xacro  ros2_control.xacro
arctos_description/urdf/common/: joint_link.xacro
arctos_hardware_interface/: CMakeLists.txt  README.md  arctos_hardware_interface.xml  package.xml
arctos_hardware_interface/config/: arctos_controller.yaml
arctos_hardware_interface/include/: arctos_interface.hpp  arctos_interface_backup.hpp
arctos_hardware_interface/include/arctos_hardware_interface/: arctos_interface.hpp  arctos_services.hpp
arctos_hardware_interface/launch/: arctos_hardware.launch.py  can_interface.launch.py  controller.launch.py  spawn_controllers.launch.py
arctos_hardware_interface/ros2_control/: arctos.ros2_control.xacro
arctos_hardware_interface/src/: arctos_interface copy 2.cpp  arctos_interface copy.cpp  arctos_interface.cpp  arctos_interface_backup.cpp  arctos_services.cpp
arctos_motor_driver/: CMakeLists.txt  README.md
arctos_motor_driver/include/arctos_motor_driver/: can_protocol.hpp  motor_driver.hpp  motor_types.hpp
arctos_motor_driver/src/: can_protocol.cpp  motor_driver.cpp
arctos_motor_driver/test/: test_can_protocol.cpp  test_motor_driver.cpp  test_motor_types.cpp
arctos_motor_driver_test/src/: arctos_motor_driver_test.cpp
arctos_moveit_base_xyz/: .setup_assistant  CMakeLists.txt  README.md  package.xml
arctos_moveit_base_xyz/config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
arctos_moveit_base_xyz/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arctos_moveit_config/config/: arctos.ros2_control.xacro  moveit_controllers.yaml
scripts/: arctos_controller.yaml  set_zero_position.py  setup_canable.sh
scripts/stepper_motor/: README.md  move_motor.py
src/arctos_bringup/: CMakeLists.txt  package.xml
src/arctos_bringup/launch/: arctos.moveit.launch.py  arctos_joint_trajectory_controller.launch.py
src/arctos_description/: CMakeLists.txt  package.xml
src/arctos_description/r6bot/urdf/: r6bot_description.urdf.xacro
src/arctos_description/urdf/: arctos.ros2_control.xacro  arctos.xacro  arctos_no_control.xacro  joint_link.xacro
src/arctos_hardware/: CMakeLists.txt  README.md  arctos_hardware_plugin.xml  package.xml  single_actuator_interface.xml
src/arctos_hardware/bringup/launch/: rrbot_modular_actuators.launch.py  test_forward_position_controller.launch.py
src/arctos_hardware/config/: controllers.yaml
src/arctos_hardware/description/launch/: view_robot.launch.py
src/arctos_hardware/description/urdf/: rrbot_modular_actuators.urdf.xacro
src/arctos_hardware/doc/: userdoc.rst
src/arctos_hardware/hardware/: rrbot_actuator.cpp
src/arctos_hardware/hardware/include/arctos_hardware/: rrbot_actuator.hpp
src/arctos_hardware/include/arctos_hardware/: single_joint_hardware.hpp
src/arctos_hardware/launch/: prototype.launch.py
src/arctos_hardware/src/: single_joint_hardware.cpp
src/arctos_hardware/test/: test_rrbot_modular_actuators_launch.py  test_urdf_xacro.py
src/arctos_hardware/urdf/: prototype.urdf.xacro
src/arctos_moveit_config/: .setup_assistant  package.xml
src/arctos_moveit_config/config/: arctos.ros2_control.xacro  arctos.srdf  arctos.urdf.xacro  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/arctos_moveit_config/launch/: demo.launch.py
src/arctos_testing/: package.xml  setup.cfg  setup.py
src/my_robot_hardware/: CMakeLists.txt  CMakeLists.txt.disabled  package.xml  package.xml.disabled  robot_hardware.xml
src/my_robot_hardware/description/ros2_control/: rrbot_modular_actuators.ros2_control.xacro
src/my_robot_hardware/include/my_robot_hardware/: arm_system_hardware.hpp  single_joint_hardware.hpp
src/my_robot_hardware/launch/: arm_control.launch.py
src/my_robot_hardware/src/: arm_system_hardware.cpp  single_joint_hardware.cpp
src/my_robot_hardware/test/: test_view_robot_launch.py
src/my_robot_hardware/urdf/: my_robot.urdf.xacro
