<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arctos_bringup</name>
  <version>0.0.0</version>
  <description>Official ROS2 package for controlling the Arctos robotic arm</description>
  
  <maintainer email="90365066+cr0Kz@users.noreply.github.com">Cr0Kz</maintainer>
  <maintainer email="coen@todo.todo">coen</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>arctos_description</exec_depend>
  <exec_depend>arctos_hardware</exec_depend>
  <exec_depend>arctos_moveit_config</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>